<resources>
    <string name="app_name">Digital House Foods</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember Me</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree">I Agree with the terms and conditions</string>
    <string name="register">Register</string>
    <string name="informe_nome">Informe um nome!</string>
    <string name="informe_email">Informe um email!</string>
    <string name="informe_senha">Informe uma senha!</string>
    <string name="senha_min_caracteres">A senha deve possuir pelo menos 8 caracteres!</string>
    <string name="senhas_diferentes">Senhas diferentes informadas!</string>
    <string name="comida_splash_screen">Comida - Splash Screen</string>
    <string name="pratos_principais">Pratos Principais</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non magna id velit porta euismod ut ac quam. Nunc non blandit quam. Ut eget risus eu tellus fringilla interdum. Donec volutpat vel metus at finibus. Ut dictum congue metus quis vulputate. Praesent finibus cursus turpis, ac pretium erat sodales vel. Nulla facilisi. Quisque et ipsum varius, mattis lectus sed, cursus dui. Morbi eget mauris id ligula blandit placerat ac sed quam. Proin dignissim suscipit mollis. Duis eget tempus mi, nec commodo arcu.</string>
    <string name="foto_da_comida">Foto da comida</string>
    <string name="foto_do_restaurante">Foto do restaurante</string>
</resources>